Epylog-1.0.3
	* Preparing for the submission to Fedora Extras
	* Ignore "su" performed by crond to cut down on noise
	* Add a few extra ignore rules for newer OSes
	* Require python-abi instead of python. NOTE: This will not
	  work on systems with python-2.2 (el3), so change the specfile
	  to Require /usr/bin/python%(%{__python} -c....) or just use my
	  packages.

Epylog-1.0.2
	* Small modification to collapse login reports
	* Fix monthmap on python-2.4

Epylog-1.0.1
	* Tiny fixes with Cyrus handling routines in logins, which made them
	  not work.
	* Automatically detect python version during .spec building.
	* Cleaned up trojans.list so it's less ugly
	
Epylog-1.0
	* Out with 1.0 already!
	* Handle ::ffff: fake ipv6 addresses for hostname resolution
	* Do not depend on elinks in RPM.
	* Default setting is to send html-only (so we don't depend on lynx)
	* Packets module can now sort by port, system, and source.
    
Epylog-0.9.7
	* Accepted Makefile patches from Will Newton
	* Accepted patches for missing logs from Will Newton (#135)
	* Fixes for bugs/RFEs: #136, #146, #148, #210, and others.
	* Riabitsev->Ryabitsev. Sigh.

Epylog-0.9.6
	* Small bugfix in repeated line lookup routines
	* Switched xml handling code from pyxml to libxml2
	* Added pam_krb5 handling for logins module
	* Added dovecot imap handling
	* Added courier imap handling
	* Only load our mytempfile if mkdtemp not available (python < 2.3)

Epylog-0.9.5
	* Fix for quasi-bug #6 (docstrings added)
	* Fix for bug #57
	* Fix for bug #53
	* Cron mode of operation added -- checks for a lockfile (bug #79)
	
Epylog-0.9.4
	* Fix for bug #38 (incorrect offsets were causing backtrace)
	* Normalized logger calls (bug #9)
	* Enhancements to mail and packets modules

Epylog-0.9.3
	* Autoconf now used to configure and build epylog.
	* Mail module now supports qmail.
	* Additions to weed_dist rules
	* Perl module removed into a separate RPM package.

Epylog-0.9.2